BuildHughes/translation-tool/inputs/source_meta/objects/Common_API_FieldValidations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used for field validations.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Column_Filter_Name__c</fullName>
        <label>Default_Column_Filter_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Length__c</fullName>
        <label>Max_Length</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Length__c</fullName>
        <label>Min_Length</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Possible_Values__c</fullName>
        <label>Possible_Values</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegEx__c</fullName>
        <label>RegEx</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDCErrorCode__c</fullName>
        <label>SFDCErrorCode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Field_Names__c</fullName>
        <label>SOQL_Field_Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_OrdereBy__c</fullName>
        <label>SOQL_OrdereBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Query__c</fullName>
        <label>SOQL_Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Where_clause__c</fullName>
        <label>SOQL_Where_clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Common_API_FieldValidations</label>
</CustomObject>